--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <footer>
         <div class="container">
             <div class="footer-content">
-                <h3>Nông Sản Sạch</h3>
+                <h3>Món ăn vặt</h3>
                 <p>Địa chỉ: 123 Đường ABC, Quận XYZ, Thành phố HCM</p>
                 <p>Hotline: 1900 1234 - Email: info@nongsansach.vn</p>
                 <div class="social-links">
@@ -215,3 +215,4 @@
 </body>
 
 </html>
+
