--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
              <div class="faq-container">
                 <details class="fade-in">
                     <summary>Sản phẩm của bạn có thực sự là hữu cơ không?</summary>
-                    <p>Chúng tôi cam kết 100%. Tất cả các nông trại đối tác đều có chứng nhận VietGAP hoặc GlobalGAP. Bạn có thể kiểm tra thông tin chi tiết qua mã QR trên mỗi sản phẩm.</p>
+                    <p>Chúng tôi cam kết 100%. tất cả các món đều được các đầu bếp chuyên nghiệp. Bạn có thể kiểm tra thông tin chi tiết qua mã QR trên mỗi sản phẩm.</p>
                 </details>
                 <details class="fade-in">
                     <summary>Phí vận chuyển được tính như thế nào?</summary>
@@ -167,7 +167,7 @@
             <div class="footer-content">
                 <h3>Món ăn vặt</h3>
                 <p>Địa chỉ: 123 Đường ABC, Quận XYZ, Thành phố HCM</p>
-                <p>Hotline: 1900 1234 - Email: info@nongsansach.vn</p>
+                <p>Hotline: 1900 1234 - Email: info@Monanvat.vn</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Nông Sản Sạch. All rights reserved.</p>
+                <p>&copy; 2025 Món ăn vặt. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -215,4 +215,5 @@
 </body>
 
 </html>
+
 
